fix: IFS-728:  Prevents too high right label of checkbox in modal dialog

--- a/src/less/es/modals.less
+++ b/src/less/es/modals.less
@@ -28,6 +28,7 @@
             }
             label {
                 min-height: 24px;
+                padding-top: 4px;
             }
         }
 
